<resources>
    <string name="app_name">UPIC</string>
    <string name="usuario">Usuario:</string>
    <string name="ini_sesgoogle">Inicia sesión con Google.</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_registro">Registrate</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aun_no_tienes_cuenta">¿Aun no tienes cuenta?</string>
    <string name="crea_tu_cuenta_en_upic">Crea tu cuenta en UPIC</string>
    <string name="registrate">Registrate!</string>
    <string name="ya_tienes_cuenta">Ya tienes cuenta?</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="telefono">Telefono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña</string>
    <string name="correo_electronic">Correo electronico.</string>
    <string name="contrase">Contraseña:</string>
    <string name="con">Contraseña.</string>
    <string name="iniciar_sesi_n">Iniciar sesión.</string>
    <string name="todo">TODO</string>
    <string name="a_n_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="item1">Seguro</string>
    <string name="item2">¿Como usar nuesta aplicación?</string>
    <string name="item3">Configuración</string>
    <string name="item4">Perfil personal</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menupr">Menupr</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_seguro">Seguro</string>
    <string name="title_help">Ayuda</string>
    <string name="title_mec">Mecanico</string>
    <string name="title_ele">Electrico</string>
    <string name="title_vul">Vulcanizadora</string>
    <string name="im_ele">TODO</string>
    <string name="im_vil">TODO</string>
    <string name="title_home">Mecanico automotriz</string>
    <string name="title_dashboard">Electrico automotriz</string>
    <string name="title_notifications">Vulcanizadora</string>
    <string name="mecanica_express">Mecanica Express</string>
    <string name="servicio_de_mecanico">Servicio de mecanico</string>
    <string name="electrico_express">Electrico Express</string>
    <string name="servicio_de_electrico">Servicio de electrico</string>
    <string name="vulca_express">Vulcanizadora Express</string>
    <string name="servicio_de_vulcanizadora">Servicio de vulcanizadora</string>
    <string name="toast_message">Haz cancelado el servicio</string>
</resources>