<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.upic2.ui.mecanico.MecanicoFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_mec" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.upic2.ui.electrico.ElectricoFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_ele" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.upic2.ui.vulcanizadora.VulcanizadoraFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_vul" />
</navigation>